# plotter

./: .gitignore  LICENSE  README.md  ScientificSpinBox.py  common_widgets.py  custom_widgets.py  docks.py  gen_plot.py  openmc-plotter  openmc_plotter.py  overlays.py  plot_colors.py  plot_explorer.py  plotgui.py  plotmodel.py  pyproject.toml  pytest.ini  scientific_spin_box.py  setup.py  statepointmodel.py  test.py  tools.py
.github/workflows/: ci.yml  python-publish-testpypi.yml  python-publish.yml
openmc_plotter/: __main__.py  custom_widgets.py  docks.py  main_window.py  overlays.py  plot_colors.py  plotgui.py  plotmodel.py  plotter.py  scientific_spin_box.py  tools.py
src/: _version.py
src/openmc_plotter/: __init__.py  docks.py  main_window.py  plot_colors.py  statepointmodel.py  tools.py
tests/: conftest.py  test.py
tests/setup_test/: test.pltvw  test.py  test1.pltvw
